Adding the bones of the house

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body>
     <div class="container">
         <h1 class="heading">Loan Calculator</h1>
+        <label for="">Loan Amount $</label>
+        <input type="number" class="loan-amount" id="loan-amount">
+        <label for="">Interest Rate</label>
+        <input type="number" class="interest-rate" id="interest-rate">
+        <label for="">Months to pay</label>
+        <input type="number" class="months-to-pay" id="months-to-pay">
+        <button class="calculate" id="calculate">Calculate</button>
+        <div class="result" id="result">Monthly Payments:</div>
     </div>
 </body>
 </html>
