--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 <body>
     <div class="container">
         <h1 class="heading">Loan Calculator</h1>
-        <label for="">Loan Amount $</label>
-        <input type="number" class="loan-amount" id="loan-amount">
-        <label for="">Interest Rate</label>
-        <input type="number" class="interest-rate" id="interest-rate">
-        <label for="">Months to pay</label>
-        <input type="number" class="months-to-pay" id="months-to-pay">
+        <p>
+            <label for="">Loan Amount</label>
+            <input type="number" id="loan-amount" min="1" max="500000" value="10000">
+        </p>
+        <p>
+            <label for="">Interest Rate</label>
+            <input type="number" id="loan-amount" min="0" max="100" value="10">
+        </p>
+        <p>
+            <label for="">Months to pay</label>
+            <input type="number" id="loan-amount"
+            min="1" max="500000" value="10000">
+        </p>
         <button class="calculate" id="calculate">Calculate</button>
         <div class="result" id="result">Monthly Payments:</div>
     </div>
