--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loan Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1 class="heading">Loan Calculator</h1>
         <p>
-            <label for="">Loan Amount</label>
-            <input type="number" id="loan-amount" min="1" max="500000" value="10000">
+            <label class="label">Loan Amount $</label>
+            <input class="input" type="number" id="loan-amount" min="1" max="500000" value="10000">
         </p>
         <p>
-            <label for="">Interest Rate</label>
-            <input type="number" id="loan-amount" min="0" max="100" value="10">
+            <label class="label">Interest Rate %</label>
+            <input class="input" type="number" id="interest-rate" min="0" max="100" value="10" step=".1">
         </p>
         <p>
-            <label for="">Months to pay</label>
-            <input type="number" id="loan-amount"
-            min="1" max="500000" value="10000">
+            <label class="label">Months to pay</label>
+            <input class="input" type="number" id="months-to-pay"
+            min="1" max="48" value="12">
         </p>
-        <button class="calculate" id="calculate">Calculate</button>
-        <div class="result" id="result">Monthly Payments:</div>
+        <p class="payment">Monthly Payment:</p>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
